manifest/blue-green-deployment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /mobility(.*)
        backend:
          serviceName: mobility
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mobility
spec:
  selector:
    app: mobility
    version: v0.0.1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mobility-testing
spec:
  selector:
    app: mobility
    version: v0.0.1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobility-deployment-v0.0.1
  labels:
    app: mobility
    version: v0.0.1
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: mobility
      version: v0.0.1
  template:
    metadata:
      labels:
        app: mobility
        version: v0.0.1
    spec:
      containers:
      - name: mobility
        image: dharma4815162342/mobility:v0.0.1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /version
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
